[package]
name = "moniker-derive"
version = "0.5.0" # MONIKER
readme = "./README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Derives for the moniker crate"
homepage = "https://github.com/brendanzab/moniker"
repository = "https://github.com/brendanzab/moniker"
documentation = "https://docs.rs/moniker-derive"
keywords = [
    "alpha-equivalence",
    "debruijn-indices",
    "variable-binding",
    "locally-nameless",
]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = "2.0.66"
synstructure = "0.13.1"
